Fixing domain input validation and UI tests

--- a/code/dev/parts/auth/reset-password.html
+++ b/code/dev/parts/auth/reset-password.html
@@ -41,13 +41,8 @@
                      id="passwordRepeat"
                      name="passwordRepeat"
                      placeholder="Repeat Password"
-                     validate-compare-to="password"
-                     ng-minlength="8"
-                     ng-maxlength="15"
-                     required>
+                     validate-compare-to="password">
               <div class="error-messages" ng-messages="editForm.passwordRepeat.$error" role="alert">
-                <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
-                <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
