--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -48,6 +48,7 @@
                      placeholder="Domain Name"
                      required>
               <div class="error-messages" ng-messages="createForm.domain_name.$error" role="alert" ng-messages-multiple>
+                <div ng-message="pattern" class="alert-text alert-text--pattern">The entered value is not a correct domain name</div>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
@@ -85,7 +86,6 @@
                      ng-model="model.origin_server"
                      id="origin_server"
                      name="origin_server"
-                     ng-pattern="/(?=^.{4,253}$)(^((?!-)(?!\_)[a-zA-Z0-9-\_]{0,62}[a-zA-Z0-9]\.)+[a-zA-Z]{2,63}$)/"
                      ng-maxlength="50"
                      placeholder="Origin Server name"
                      required>
@@ -108,7 +108,6 @@
                      ng-disabled="_loading"
                      id="origin_host_header"
                      name="origin_host_header"
-                     ng-pattern="/(?=^.{4,253}$)(^((?!-)(?!\_)[a-zA-Z0-9-\_]{0,62}[a-zA-Z0-9]\.)+[a-zA-Z]{2,63}$)/"
                      ng-maxlength="50"
                      placeholder="Origin Host Header"
                      required>
@@ -159,7 +158,7 @@
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
             <div class="col-md-10">
-              <textarea id="comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
               <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
