--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -22,9 +22,9 @@
       <div class="panel-body">
         <form class="form-horizontal" name="editForm">
           <div class="form-group" ng-class="{ 'has-error': editForm.job_name.$invalid && editForm.job_name.$dirty }">
-            <label for="job_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Job Name">Job Name *</label>
+            <label for="job_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Log shipping job name (150 characters max)">Job Name *</label>
             <div class="col-sm-10">
-              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.job_name" name="job_name" id="job_name" placeholder="Job Name" required>
+              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.job_name" name="job_name" id="job_name" placeholder="Job Name" ng-maxlength="150" required>
               <div class="error-messages" ng-messages="editForm.job_name.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -112,7 +112,7 @@
               <div class="form-group" ng-class="{ 'has-error': editForm.destinationHost.$invalid && editForm.destinationHost.$dirty }">
                 <label for="destinationHost" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Host">Host</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="Host" name="destinationHost" placeholder="Host" ng-model="model.destination_host" ng-disabled="_loading">
+                  <input type="text" class="form-control" id="Host" name="destinationHost" placeholder="Host" ng-model="model.destination_host" ng-maxlength="150" ng-disabled="_loading">
                   <div class="error-messages" ng-messages="editForm.destinationHost.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
@@ -121,7 +121,7 @@
               <div class="form-group" ng-class="{'has-error': editForm.destinationPort.$invalid && editForm.destinationPort.$dirty }">
                 <label for="destinationPort" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Port">Port</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="destination_port" name="destinationPort" placeholder="Port" ng-model="model.destination_port" ng-disabled="_loading">
+                  <input type="text" class="form-control" id="destination_port" name="destinationPort" placeholder="Port" ng-model="model.destination_port" ng-maxlength="10" ng-disabled="_loading">
                   <div class="error-messages" ng-messages="editForm.destinationPort.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
@@ -130,7 +130,7 @@
               <div class="form-group" ng-class="{ 'has-error': editForm.destinationKey.$invalid && editForm.destinationKey.$dirty }">
                 <label for="destinationKey" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Secret Key">Secret Key</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="destination_key" name="destinationKey" placeholder="Secret Key" ng-model="model.destination_key" ng-disabled="_loading">
+                  <input type="text" class="form-control" id="destination_key" name="destinationKey" placeholder="Secret Key" ng-model="model.destination_key" ng-maxlength="150" ng-disabled="_loading">
                 </div>
                 <div class="error-messages" ng-messages="editForm.destinationKey.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
@@ -139,7 +139,7 @@
               <div class="form-group" ng-class="{ 'has-error': editForm.destinationUsername.$invalid && editForm.destinationUsername.$dirty }">
                 <label for="destinationUsername" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Username">Username</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="destination_username" name="destinationUsername" placeholder="Username" ng-model="model.destination_username" ng-disabled="_loading">
+                  <input type="text" class="form-control" id="destination_username" name="destinationUsername" placeholder="Username" ng-model="model.destination_username" ng-maxlength="150" ng-disabled="_loading">
                   <div class="error-messages" ng-messages="editForm.destinationUsername.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
@@ -148,7 +148,7 @@
               <div class="form-group" ng-class="{'has-error': editForm.destinationPassword.$invalid && editForm.destinationPassword.$dirty }">
                 <label for="destinationPassword" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Password ">Password </label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="destination_password" name="destinationPassword" placeholder="Password" ng-model="model.destination_password" ng-disabled="_loading">
+                  <input type="text" class="form-control" id="destination_password" name="destinationPassword" placeholder="Password" ng-model="model.destination_password" ng-maxlength="150" ng-disabled="_loading">
                   <div class="error-messages" ng-messages="editForm.destinationPassword.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
@@ -170,7 +170,7 @@
           <div class="form-group" ng-class="{'has-error': editForm.comment.$invalid && editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
             <div class="col-sm-6">
-              <textarea id="comment" name="comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control" ng-model="model.comment" ng-disabled="_loading">
+              <textarea id="comment" name="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
               <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
