--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -17,3 +17,5 @@
 <div ng-message="query-strings-options" class="alert-text alert-text--query-strings-options">Incorrect query strings option name format</div>
 <!-- message for validate-wildcard-domain-field  -->
 <div ng-message="wildcard-domain-field" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard domain field</div>
+<!-- message for  validate-caching-rule-url  -->
+<div ng-message="caching-rule-url" class="alert-text alert-text--wildcard-domain-field">Incorrect url field</div>
