Create new directive 'validate-caching-rule-header-value'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -161,6 +161,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
 <script type="text/javascript" src="js/portal/shared/search/search.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-cache-bypass-locations.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-caching-rule-header-value.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-caching-rule-url.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-compare-to.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-cookies-options.directive.js"></script>
