--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -18,4 +18,6 @@
 <!-- message for validate-wildcard-domain-field  -->
 <div ng-message="wildcard-domain-field" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard domain field</div>
 <!-- message for  validate-caching-rule-url  -->
-<div ng-message="caching-rule-url" class="alert-text alert-text--wildcard-domain-field">Incorrect url field</div>
+<div ng-message="caching-rule-url" class="alert-text alert-text--caching-rule-url">Incorrect url field</div>
+<!-- message for  validate-caching-rule-header-value  -->
+<div ng-message="caching-rule-header-value" class="alert-text alert-text--caching-rule-header-value">Incorrect header-value</div>
