--- a/code/dev/parts/domains/end-user-response-headers/end-user-response-headers.tpl.html
+++ b/code/dev/parts/domains/end-user-response-headers/end-user-response-headers.tpl.html
@@ -28,11 +28,17 @@
         </tr>
         <!-- New line-->
         <tr ng-form="newLineForm" class="well">
-          <td>
+          <td ng-class="{ 'has-error': newLineForm.header_name.$invalid && newLineForm.header_name.$dirty }">
             <input type="text" name="header_name" class="form-control" ng-model="$ctrl.newEndUserResponseHeader.header_name" placeholder="New Header Name" required>
+            <div class="error-messages" ng-messages="newLineForm.header_name.$error" role="alert" ng-messages-multiple="false">
+              <div ng-messages-include="parts/shared/error-messages.html"></div>
+            </div>
           </td>
-          <td>
-            <input type="text" name="header_value" class="form-control" ng-model="$ctrl.newEndUserResponseHeader.header_value" placeholder="New Header Value" required>
+          <td ng-class="{ 'has-error': newLineForm.header_value.$invalid && newLineForm.header_value.$dirty }">
+            <input type="text" validate-caching-rule-header-value name="header_value" class="form-control" ng-model="$ctrl.newEndUserResponseHeader.header_value" placeholder="New Header Value" required>
+            <div class="error-messages" ng-messages="newLineForm.header_value.$error" role="alert" ng-messages-multiple="false">
+              <div ng-messages-include="parts/shared/error-messages.html"></div>
+            </div>
           </td>
           <td>
             <select class="form-control" ng-model="$ctrl.newEndUserResponseHeader.operation">
