--- a/code/index.html
+++ b/code/index.html
@@ -21,8 +21,7 @@
   <![endif]-->
   <script src="zendesk.js"></script>
 </head>
-<body data-ng-app="revapm.Portal">
-<alert-list></alert-list>
+<body dw-loading="loading" data-ng-app="revapm.Portal">
 <toaster-container toaster-options="{'animation-class': 'toast-top-center'}"></toaster-container>
 <div ui-view="layout" class="layout"></div>
 
