Update gulp task "build" - re-base zendesk.js

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -37,7 +37,7 @@
   <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="zendesk.js"></script>
+
 </head>
 <body data-ng-app="revapm.Portal">
 <toaster-container toaster-options="{'animation-class': 'toast-top-center'}"></toaster-container>
@@ -60,6 +60,7 @@
 </script>
 
 <!-- build:js scripts/vendor.js -->
+<script src="js/zendesk/zendesk.js"></script>
 <script type="text/javascript" src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 <script type="text/javascript" src="../bower_components/PACE/pace.js"></script>
 
