Some changes in domain validation regex (still need to finalize this)

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -10,14 +10,14 @@
 <!-- message for validate-domains-list -->
 <div ng-message="domains-list" class="alert-text alert-text--domains-list">Incorrect domain name format</div>
 <!-- message for validate-cookies-options -->
-<div ng-message="cookies-options" class="alert-text alert-text--cookies-options">Incorrect cookies name format</div>
+<div ng-message="cookies-options" class="alert-text alert-text--cookies-options">Incorrect cookie name format</div>
 <!-- message for validate-сache-bypass-locations -->
-<div ng-message="сache-bypass-locations" class="alert-text alert-text--сache-bypass-locations">Incorrect сache bypass location name format</div>
+<div ng-message="сache-bypass-locations" class="alert-text alert-text--сache-bypass-locations">Incorrect cache bypass location name format</div>
 <!-- message for validate-query-strings-options -->
-<div ng-message="query-strings-options" class="alert-text alert-text--query-strings-options">Incorrect query strings option name format</div>
+<div ng-message="query-strings-options" class="alert-text alert-text--query-strings-options">Incorrect query string name format</div>
 <!-- message for validate-wildcard-domain-field  -->
-<div ng-message="wildcard-domain-field" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard domain field</div>
+<div ng-message="wildcard-domain-field" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard domain name format</div>
 <!-- message for  validate-caching-rule-url  -->
-<div ng-message="caching-rule-url" class="alert-text alert-text--caching-rule-url">Incorrect url field</div>
+<div ng-message="caching-rule-url" class="alert-text alert-text--caching-rule-url">Incorrect URL string format</div>
 <!-- message for  validate-caching-rule-header-value  -->
 <div ng-message="caching-rule-header-value" class="alert-text alert-text--caching-rule-header-value">Incorrect header-value</div>
