Update “Update Password” form - don’t show red fields  after a successful password change

--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -30,7 +30,7 @@
             Loading...
           </div>
 
-          <form class="form-horizontal" name="editForm" ng-submit="updateProfile(user)" novalidate>
+          <form class="form-horizontal" name="editForm" ng-submit="updateProfile(user);editForm.$setPristine();" novalidate>
             <div class="form-group"  ng-class="{'has-error': editForm.current_password.$invalid && editForm.current_password.$dirty}">
               <label for="current_password" class="col-sm-2 control-label">Current Password</label>
               <div class="col-sm-10">
