--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -26,7 +26,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="_loading">
-            <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
+            <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>&nbsp;
             Loading...
           </div>
 
@@ -101,6 +101,7 @@
                 </a>
 
                 <button class="btn btn-success" ng-disabled="_loading || editForm.$invalid">
+                  <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                   <i class="glyphicon glyphicon-ok"></i>&nbsp;
                   Update Password
                 </button>
