--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -19,5 +19,7 @@
 <div ng-message="wildcard-domain-field" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard domain name format</div>
 <!-- message for  validate-caching-rule-url  -->
 <div ng-message="caching-rule-url" class="alert-text alert-text--caching-rule-url">Incorrect URL string format</div>
+<!-- message for  validate-caching-rule-header-name  -->
+<div ng-message="caching-rule-header-name" class="alert-text alert-text--caching-rule-header-name">Incorrect header-name</div>
 <!-- message for  validate-caching-rule-header-value  -->
 <div ng-message="caching-rule-header-value" class="alert-text alert-text--caching-rule-header-value">Incorrect header-value</div>
