--- a/code/dev/parts/ssl_certs/list.html
+++ b/code/dev/parts/ssl_certs/list.html
@@ -123,7 +123,7 @@
                   <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit SSL Certificate">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <a href="" ng-if="!item.loading" ng-click="deleteSSL_cert(item)" uib-tooltip="Delete SSL Certificate">
+                  <a href="" ng-if="!item.loading" ng-click="deleteSSLCert(item)" uib-tooltip="Delete SSL Certificate">
                     <i class="glyphicon glyphicon-trash"></i>
                   </a>
                 </td>
